# cc13x4-cc26x4-flash

./: .gitmodules  Cargo.toml  README.md  build.rs  template.yaml
.cargo/: config.toml
src/: main.rs
