[package]
authors = ["Sean Lyons <seanmlyons22@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "cc13x4-cc26x4-flash"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
vcell = "0.1.2"
critical-section = "1.0"
flash-algorithm = { version = "0.4.0" }
rtt-target = { version = "0.3", features = ["cortex-m"] }
cc13x4_cc26x4_pac = { version = "0.10.3", features = ["critical-section", "rt"]}

# this lets you use `cargo fix`!
[[bin]]
name = "cc13x4-cc26x4-flash"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
